--- a/app/templates/PlaylistDetail.html
+++ b/app/templates/PlaylistDetail.html
@@ -3,8 +3,12 @@
 {% block content %}
     <style>
         .tooltip-container {
+            width: 50px;
+            height: 50px;
             position: relative;
-            display: inline-block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .tooltip-container .tooltiptext {
@@ -28,6 +32,12 @@
             visibility: visible;
             opacity: 1;
         }
+
+        .description-cell {
+            width: 50px;
+            height: 50px;
+            position: relative;
+        }
     </style>
     <div class="container">
         <h1>Playlist: {{ playlist.name }}</h1>
@@ -38,8 +48,8 @@
                     {% for cell in row %}
                         {% set green = (1 - cell / max_val) * 255 %}
                         {% set red = (cell / max_val) * 255 %}
-                        <td style="background-color: rgb({{ red | round(0) }}, {{ green | round(0) }}, 0); width: 50px; height: 50px; position: relative;">
-                            <div class="tooltip-container" style="width: 50px; height: 50px; position: relative; display: flex; align-items: center; justify-content: center;">
+                        <td class="description-cell" style="background-color: rgb({{ red | round(0) }}, {{ green | round(0) }}, 0);">
+                            <div class="tooltip-container">
                                 <span>{{ "%.2f" | format(cell) }}</span>
                                 <span class="tooltiptext">{{ song_names[outer_loop.index0] }} <br/>-><br/> {{ song_names[loop.index0] }}</span>
                             </div>
