--- a/app/templates/PlaylistDetail.html
+++ b/app/templates/PlaylistDetail.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <style>
+    .container{
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     .tooltip-container {
         width: 50px;
         height: 50px;
